[gd_scene load_steps=10 format=3 uid="uid://wrl8qtpj08iw"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_egy55"]
[ext_resource type="Texture2D" uid="uid://c2hulywjpmr6q" path="res://assets/credits_icons/1-coffe.png" id="2_hdcp8"]
[ext_resource type="Texture2D" uid="uid://c1v68fqkb36nt" path="res://Art/9c0l9jw2m0k61.png" id="3_m0xvr"]
[ext_resource type="Texture2D" uid="uid://p66irrxqu5rq" path="res://Art/Screenshot_2024-09-30-22-52-21-17.jpg" id="3_uxp4h"]
[ext_resource type="AudioStream" uid="uid://bnq73jdpkunkh" path="res://Art/Heartbeat - Royalty Free Fantasy Music.mp3" id="5_04pcq"]

[sub_resource type="ViewportTexture" id="ViewportTexture_vxev4"]

[sub_resource type="Animation" id="Animation_2hqt2"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.027451, 0.0235294, 0.027451, 0), Color(0.027451, 0.0235294, 0.027451, 1)]
}

[sub_resource type="Animation" id="Animation_cvui3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.027451, 0.0235294, 0.027451, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2m0bq"]
_data = {
"RESET": SubResource("Animation_cvui3"),
"fade": SubResource("Animation_2hqt2")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_egy55")

[node name="9c0l9Jw2m0k61" type="Sprite2D" parent="."]
position = Vector2(160, 94)
scale = Vector2(0.296296, 0.274074)
texture = ExtResource("3_m0xvr")

[node name="Screenshot2024-09-30-22-52-21-17" type="Sprite2D" parent="."]
position = Vector2(540, 95.75)
scale = Vector2(4.05556, 1.36878)
texture = ExtResource("3_uxp4h")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.027451, 0.0235294, 0.027451, 0)
z_index = 1
offset_left = -46.0
offset_top = -98.0
offset_right = 506.0
offset_bottom = 301.0
texture = SubResource("ViewportTexture_vxev4")

[node name="GameNameLabel" type="RichTextLabel" parent="."]
offset_left = 166.0
offset_top = 21.0
offset_right = 496.0
offset_bottom = 59.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 15
text = "RETURN OF THE KING"
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 36.0
offset_top = 91.0
offset_right = 107.0
offset_bottom = 118.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="StartButton"]
layout_mode = 0
offset_right = 253.0
offset_bottom = 31.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Start"
metadata/_edit_lock_ = true

[node name="CreditsButton" type="TextureButton" parent="."]
offset_left = 31.0
offset_top = 108.0
offset_right = 127.0
offset_bottom = 135.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="CreditsButton"]
layout_mode = 0
offset_right = 253.0
offset_bottom = 31.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Credits"
metadata/_edit_lock_ = true

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 40.0
offset_top = 124.0
offset_right = 96.0
offset_bottom = 151.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="QuitButton"]
layout_mode = 0
offset_right = 253.0
offset_bottom = 31.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Quit"
metadata/_edit_lock_ = true

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 591.0
offset_top = 154.0
offset_right = 647.0
offset_bottom = 181.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="BackButton"]
layout_mode = 0
offset_right = 253.0
offset_bottom = 31.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Back"
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true

[node name="1-coffe" type="Sprite2D" parent="."]
position = Vector2(410, 60)
texture = ExtResource("2_hdcp8")

[node name="CreditsTitleLabel" type="RichTextLabel" parent="."]
offset_left = 439.0
offset_top = 14.0
offset_right = 576.0
offset_bottom = 52.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 16
text = "Credits"
metadata/_edit_use_anchors_ = true

[node name="CreditsLabel2" type="RichTextLabel" parent="."]
offset_left = 507.0
offset_top = 46.0
offset_right = 632.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "-The Lost Eco

"
metadata/_edit_use_anchors_ = true

[node name="CreditsLabel" type="RichTextLabel" parent="."]
offset_left = 349.0
offset_top = 54.0
offset_right = 468.0
offset_bottom = 167.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "- Coffe

- More people"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2m0bq")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_04pcq")
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
